Menu bar added. Piska logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Nurmira</title>
 
     <!-- stylesheets -->
-    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/home.css">
     
     <!-- scripts -->
     <!-- <script type="module" src=""></script> -->
@@ -20,43 +21,50 @@
 
 
 <body>
-    <div class="page-header">
+    <header>
         <div class="menu">
             <div class="menu-logo">
-                <a href="">
-                    <img src="assets/loGOggle.png" alt="Our logo"/>
+                <a class="menu-logo-image" href="">
+                    <img src="assets/logo-piska.png" alt="Our logo"/>
                 </a>                  
             </div>
-
+    
             <div class="menu-bar">
-                <div class="menu-list">
-                    <a href="">
+                <div class="menu-bar-item">
+                    <a class="menu-bar-text" href="">
                         Home
                     </a>
                 </div>
-                <div class="menu-list">
-                    <a href="">
+                <div class="menu-bar-item">
+                    <a class="menu-bar-text" href="">
                         Over Vida
                     </a>
                 </div>
-                <div class="menu-list">
-                    <a href="">
+                <div class="menu-bar-item">
+                    <a class="menu-bar-text" href="">
                         Blog
                     </a>
                 </div>
-                <div class="menu-list">
-                    <a href="">
+                <div class="menu-bar-item">
+                    <a class="menu-bar-text" href="">
                         Trainingen
                     </a>
                 </div>
-                <div class="menu-list">
-                    <a href="">
+                <div class="menu-bar-item">
+                    <a class="menu-bar-text" href="">
                         Contact
                     </a>
                 </div>
             </div>
         </div>
-    </div>
+    </header>
+
+
+
+    <dev class="upper-image"> 
+        <img class="upper-image-img" src="assets/acdc.jpeg" alt="Ac Dc">
+    </dev>
+
 </body>
 
 
