Working on first page, upper image and text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/buttons.css">
     
     <!-- scripts -->
     <!-- <script type="module" src=""></script> -->
@@ -61,9 +62,21 @@
 
 
 
-    <dev class="upper-image"> 
-        <img class="upper-image-img" src="assets/acdc.jpeg" alt="Ac Dc">
-    </dev>
+    <div class="first-part">
+        <div class="first-part-left">
+            <img class="first-part-image" src="assets/bigboy.jpeg" alt="Ac Dc">
+        </div>
+
+        <div class="first-part-right">
+            <div class="first-part-text">
+                <h1 class="first-part-header">Piska</h1>
+                <h1 class="first-part-header">Siska</h1>
+                <h1 class="first-part-header">Svastica</h1>
+                <p class="first-part-par">Consectetur adipisicing elit. Vero atque quis possimus a! Beatae, harum nobis! Ducimus consequuntur nobis delectus totam dolore. Incidunt inventore, animi quod ab minima sapiente deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nesciunt reprehenderit, consequatur possimus, tempora quia sit laboriosam aspernatur vel aut debitis totam maiores odit iste cupiditate, nobis libero at assumenda.</p> 
+            </div>
+            <button class="black-button">Zenchin i detei</button> 
+        </div>
+    </div>
 
 </body>
 
