The upper image and text are almost perfect

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/home-first-part.css">
     <link rel="stylesheet" href="/css/buttons.css">
     
     <!-- scripts -->
@@ -69,12 +70,17 @@
 
         <div class="first-part-right">
             <div class="first-part-text">
-                <h1 class="first-part-header">Piska</h1>
-                <h1 class="first-part-header">Siska</h1>
-                <h1 class="first-part-header">Svastica</h1>
+                <div class="first-part-headers">
+                    <h1 class="first-part-header">Piska</h1>
+                    <h1 class="first-part-header">Siska</h1>
+                    <h1 class="first-part-header">Svastica</h1>
+                </div>
                 <p class="first-part-par">Consectetur adipisicing elit. Vero atque quis possimus a! Beatae, harum nobis! Ducimus consequuntur nobis delectus totam dolore. Incidunt inventore, animi quod ab minima sapiente deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nesciunt reprehenderit, consequatur possimus, tempora quia sit laboriosam aspernatur vel aut debitis totam maiores odit iste cupiditate, nobis libero at assumenda.</p> 
+                <div class="first-part-buttons">
+                    <button class="black-button part-button">Zenchin i detei</button>
+                    <button class="blue-button part-button">I lublu sobak</button>
+                </div>
             </div>
-            <button class="black-button">Zenchin i detei</button> 
         </div>
     </div>
 
