--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
     <!-- meta data -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- TITLE -->
     <title>Nurmira</title>
@@ -25,38 +26,28 @@
 <body>
     <header>
         <div class="menu">
-            <div class="menu-logo">
-                <a class="menu-logo-image" href="">
+            <div id="menu-home" class="menu-logo">
+                <a class="menu-logo-image" href="index.html">
                     <img src="assets/logo-piska.png" alt="Our logo"/>
                 </a>                  
             </div>
     
             <div class="menu-bar">
-                <div class="menu-bar-item">
-                    <a class="menu-bar-text" href="">
-                        Home
-                    </a>
-                </div>
-                <div class="menu-bar-item">
-                    <a class="menu-bar-text" href="">
-                        Over Vida
-                    </a>
-                </div>
-                <div class="menu-bar-item">
-                    <a class="menu-bar-text" href="">
-                        Blog
-                    </a>
-                </div>
-                <div class="menu-bar-item">
-                    <a class="menu-bar-text" href="">
-                        Trainingen
-                    </a>
-                </div>
-                <div class="menu-bar-item">
-                    <a class="menu-bar-text" href="">
-                        Contact
-                    </a>
-                </div>
+                <a id="menu-home" class="menu-bar-item menu-bar-text" href="index.html">
+                    Home
+                </a>
+                <a id="menu-over-vida" class="menu-bar-item menu-bar-text" href="">
+                    Over Vida
+                </a>
+                <a id="menu-blog" class="menu-bar-item menu-bar-text" href="html/blog.html">
+                    Blog
+                </a>
+                <a id="menu-trainingen" class="menu-bar-item menu-bar-text" href="">
+                    Trainingen
+                </a>
+                <a id="menu-contact" class="menu-bar-item menu-bar-text" href="">
+                    Contact
+                </a>
             </div>
         </div>
     </header>
