Second part on Home page. A lot of tweaks to fit different screen sizes.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/home-first-part.css">
+    <link rel="stylesheet" href="/css/home-second-part.css">
     <link rel="stylesheet" href="/css/buttons.css">
     
     <!-- scripts -->
@@ -54,7 +55,7 @@
 
 
     <main>
-        <div class="first-part">
+        <div class="part first-part">
             <div class="first-part-left">
                 <img class="first-part-image" src="assets/bigboy.jpeg" alt="Ac Dc">
             </div>
@@ -71,6 +72,34 @@
                         <button class="black-button part-button">Zenchin i detei</button>
                         <button class="blue-button part-button">I lublu sobak</button>
                     </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="part second-part">
+            <h1 class="second-part-header">De kracht van Rekenreis</h1>
+            <div class="second-part-content">
+                <div class="second-part-paragraph">
+                    <span class="second-part-pcircle" style="background-color: rgb(203, 84, 73);">
+                        <h2 class="second-part-circle-text">1</h2>
+                    </span>
+                    <h2 class="second-part-pheader">AANDACHT</h2>
+                    <p class="second-part-ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas cumque repudiandae illo nobis perferendis ea ab unde perspiciatis. Beatae magnam sequi necessitatibus esse laborum veritatis libero asperiores, molestiae rerum?</p>
+                </div>
+                <div class="second-part-paragraph">
+                    <span class="second-part-pcircle" style="background-color: rgb(170, 159, 17);">
+                        <h2 class="second-part-circle-text">2</h2>
+                    </span>
+                    <h2 class="second-part-pheader">FOCUS</h2>
+                    <p class="second-part-ptext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia quas quisquam tenetur laboriosam quibusdam nihil eius. Rem qui earum dignissimos possimus rerum aut error fugiat molestiae, modi odit velit ab.</p>
+                </div>
+                <div class="second-part-paragraph">
+                    <span class="second-part-pcircle" style="background-color: rgb(42, 175, 42);">
+                        <h2 class="second-part-circle-text">3</h2>
+                    </span>
+                    <h2 class="second-part-pheader">GEHEUGEN</h2>
+                    <p class="second-part-ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cum facere sequi veniam aspernatur esse? Odio iusto nihil eligendi placeat enim explicabo assumenda provident tempore, aliquid dolores ipsa voluptate officia!</p>
                 </div>
             </div>
         </div>
