Added over-vida page, deleted piska, siska and svastica

--- a/html/blog.html
+++ b/html/blog.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- TITLE -->
-    <title>Blog</title>
+    <title>Nurmira</title>
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="../css/menu.css">
@@ -32,7 +32,7 @@
                 <a id="menu-home" class="menu-bar-item menu-bar-text" href="../index.html">
                     Home
                 </a>
-                <a id="menu-over-vida" class="menu-bar-item menu-bar-text" href="">
+                <a id="menu-over-vida" class="menu-bar-item menu-bar-text" href="../html/over-vida.html">
                     Over Vida
                 </a>
                 <a id="menu-blog" class="menu-bar-item menu-bar-text" href="../html/blog.html">
