--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a id="menu-home" class="menu-bar-item menu-bar-text" href="index.html">
                     Home
                 </a>
-                <a id="menu-over-vida" class="menu-bar-item menu-bar-text" href="">
+                <a id="menu-over-vida" class="menu-bar-item menu-bar-text" href="html/over-vida.html">
                     Over Vida
                 </a>
                 <a id="menu-blog" class="menu-bar-item menu-bar-text" href="html/blog.html">
@@ -63,9 +63,9 @@
             <div class="first-part-right">
                 <div class="first-part-text">
                     <div class="first-part-headers">
-                        <h1 class="first-part-header">Piska</h1>
-                        <h1 class="first-part-header">Siska</h1>
-                        <h1 class="first-part-header">Svastica</h1>
+                        <h1 class="first-part-header">H1</h1>
+                        <h1 class="first-part-header">Head2</h1>
+                        <h1 class="first-part-header">Header3</h1>
                     </div>
                     <p class="first-part-par">Consectetur adipisicing elit. Vero atque quis possimus a! Beatae, harum nobis! Ducimus consequuntur nobis delectus totam dolore. Incidunt inventore, animi quod ab minima sapiente deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nesciunt reprehenderit, consequatur possimus, tempora quia sit laboriosam aspernatur vel aut debitis totam maiores odit iste cupiditate, nobis libero at assumenda.</p> 
                     <div class="first-part-buttons">
