Broke everything, working on over-vida

--- a/html/over-vida.html
+++ b/html/over-vida.html
@@ -50,8 +50,16 @@
 
 
     <main>
-        <div class="over-our-team">
-
+        <div class="team-photo">
+            <img class="team-photo-image" src="../assets/within-temptation.jpg">
+            <h1 class="team-photo-label">Vida Niazian<br>Bouwen aan een generatie met Karakter!</h3>
+        </div>
+        <div class="page-content">
+            <div class="part">
+                <div class="part-with-image">
+                    <img class="portrait" src="../assets/sharon-den-adel.jpeg">
+                </div>
+            </div>
         </div>
     </main>
 </body>
