--- a/index.html
+++ b/index.html
@@ -55,51 +55,53 @@
 
 
     <main>
-        <div class="part first-part">
-            <div class="first-part-left">
-                <img class="first-part-image" src="assets/bigboy.jpeg" alt="Ac Dc">
-            </div>
-    
-            <div class="first-part-right">
-                <div class="first-part-text">
-                    <div class="first-part-headers">
-                        <h1 class="first-part-header">H1</h1>
-                        <h1 class="first-part-header">Head2</h1>
-                        <h1 class="first-part-header">Header3</h1>
-                    </div>
-                    <p class="first-part-par">Consectetur adipisicing elit. Vero atque quis possimus a! Beatae, harum nobis! Ducimus consequuntur nobis delectus totam dolore. Incidunt inventore, animi quod ab minima sapiente deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nesciunt reprehenderit, consequatur possimus, tempora quia sit laboriosam aspernatur vel aut debitis totam maiores odit iste cupiditate, nobis libero at assumenda.</p> 
-                    <div class="first-part-buttons">
-                        <button class="black-button part-button">Zenchin i detei</button>
-                        <button class="blue-button part-button">I lublu sobak</button>
+        <div class="page-content">
+            <div class="part first-part">
+                <div class="first-part-left">
+                    <img class="first-part-image" src="assets/bigboy.jpeg" alt="Ac Dc">
+                </div>
+        
+                <div class="first-part-right">
+                    <div class="first-part-text">
+                        <div class="first-part-headers">
+                            <h1 class="first-part-header">H1</h1>
+                            <h1 class="first-part-header">Head2</h1>
+                            <h1 class="first-part-header">Header3</h1>
+                        </div>
+                        <p class="first-part-par">Consectetur adipisicing elit. Vero atque quis possimus a! Beatae, harum nobis! Ducimus consequuntur nobis delectus totam dolore. Incidunt inventore, animi quod ab minima sapiente deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nesciunt reprehenderit, consequatur possimus, tempora quia sit laboriosam aspernatur vel aut debitis totam maiores odit iste cupiditate, nobis libero at assumenda.</p> 
+                        <div class="first-part-buttons">
+                            <button class="black-button part-button">Zenchin i detei</button>
+                            <button class="blue-button part-button">I lublu sobak</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
 
-        <div class="part second-part">
-            <h1 class="second-part-header">De kracht van Rekenreis</h1>
-            <div class="second-part-content">
-                <div class="second-part-paragraph">
-                    <span class="second-part-pcircle" style="background-color: rgb(203, 84, 73);">
-                        <h2 class="second-part-circle-text">1</h2>
-                    </span>
-                    <h2 class="second-part-pheader">AANDACHT</h2>
-                    <p class="second-part-ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas cumque repudiandae illo nobis perferendis ea ab unde perspiciatis. Beatae magnam sequi necessitatibus esse laborum veritatis libero asperiores, molestiae rerum?</p>
-                </div>
-                <div class="second-part-paragraph">
-                    <span class="second-part-pcircle" style="background-color: rgb(170, 159, 17);">
-                        <h2 class="second-part-circle-text">2</h2>
-                    </span>
-                    <h2 class="second-part-pheader">FOCUS</h2>
-                    <p class="second-part-ptext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia quas quisquam tenetur laboriosam quibusdam nihil eius. Rem qui earum dignissimos possimus rerum aut error fugiat molestiae, modi odit velit ab.</p>
-                </div>
-                <div class="second-part-paragraph">
-                    <span class="second-part-pcircle" style="background-color: rgb(42, 175, 42);">
-                        <h2 class="second-part-circle-text">3</h2>
-                    </span>
-                    <h2 class="second-part-pheader">GEHEUGEN</h2>
-                    <p class="second-part-ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cum facere sequi veniam aspernatur esse? Odio iusto nihil eligendi placeat enim explicabo assumenda provident tempore, aliquid dolores ipsa voluptate officia!</p>
+            <div class="part second-part">
+                <h1 class="second-part-header">De kracht van Rekenreis</h1>
+                <div class="second-part-content">
+                    <div class="second-part-paragraph">
+                        <span class="second-part-pcircle" style="background-color: rgb(203, 84, 73);">
+                            <h2 class="second-part-circle-text">1</h2>
+                        </span>
+                        <h2 class="second-part-pheader">AANDACHT</h2>
+                        <p class="second-part-ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptas cumque repudiandae illo nobis perferendis ea ab unde perspiciatis. Beatae magnam sequi necessitatibus esse laborum veritatis libero asperiores, molestiae rerum?</p>
+                    </div>
+                    <div class="second-part-paragraph">
+                        <span class="second-part-pcircle" style="background-color: rgb(170, 159, 17);">
+                            <h2 class="second-part-circle-text">2</h2>
+                        </span>
+                        <h2 class="second-part-pheader">FOCUS</h2>
+                        <p class="second-part-ptext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia quas quisquam tenetur laboriosam quibusdam nihil eius. Rem qui earum dignissimos possimus rerum aut error fugiat molestiae, modi odit velit ab.</p>
+                    </div>
+                    <div class="second-part-paragraph">
+                        <span class="second-part-pcircle" style="background-color: rgb(42, 175, 42);">
+                            <h2 class="second-part-circle-text">3</h2>
+                        </span>
+                        <h2 class="second-part-pheader">GEHEUGEN</h2>
+                        <p class="second-part-ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cum facere sequi veniam aspernatur esse? Odio iusto nihil eligendi placeat enim explicabo assumenda provident tempore, aliquid dolores ipsa voluptate officia!</p>
+                    </div>
                 </div>
             </div>
         </div>
