--- a/html/blog.html
+++ b/html/blog.html
@@ -50,87 +50,89 @@
 
 
     <main>
-        <div class="blog-article-header">
-            <h1 class="blog-article-header-text">Our Blog</h1>
-        </div>
-        <div class="blog-article-content">
-            <div class="blog-article-buttons">
-                <a class="blog-article-button" href="">
-                    <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
-                    <div class="blog-article-button-text">
-                        <h3 class="blog-article-button-header">
-                            А вызнали эти бесполезные факты про хамилионов?</h3>
-                        <p class="blog-article-button-paragraph">
-                            Например что они существовали на земле за долго до того как богу 
-                            пришла идея родится.</p>
-                    </div>
-                </a>
+        <div class="page-content">
+            <div class="blog-article-header">
+                <h1 class="blog-article-header-text">Our Blog</h1>
+            </div>
+            <div class="blog-article-content">
+                <div class="blog-article-buttons">
+                    <a class="blog-article-button" href="">
+                        <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
+                        <div class="blog-article-button-text">
+                            <h3 class="blog-article-button-header">
+                                А вызнали эти бесполезные факты про хамилионов?</h3>
+                            <p class="blog-article-button-paragraph">
+                                Например что они существовали на земле за долго до того как богу 
+                                пришла идея родится.</p>
+                        </div>
+                    </a>
 
-                <a class="blog-article-button" href="">
-                    <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
-                    <div class="blog-article-button-text">
-                        <h3 class="blog-article-button-header">
-                            А вызнали эти бесполезные факты про хамилионов?</h3>
-                        <p class="blog-article-button-paragraph">
-                            Например что они существовали на земле за долго до того как богу 
-                            пришла идея родится.</p>
-                    </div>
-                </a>
+                    <a class="blog-article-button" href="">
+                        <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
+                        <div class="blog-article-button-text">
+                            <h3 class="blog-article-button-header">
+                                А вызнали эти бесполезные факты про хамилионов?</h3>
+                            <p class="blog-article-button-paragraph">
+                                Например что они существовали на земле за долго до того как богу 
+                                пришла идея родится.</p>
+                        </div>
+                    </a>
 
-                <a class="blog-article-button" href="">
-                    <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
-                    <div class="blog-article-button-text">
-                        <h3 class="blog-article-button-header">
-                            А вызнали эти бесполезные факты про хамилионов?</h3>
-                        <p class="blog-article-button-paragraph">
-                            Например что они существовали на земле за долго до того как богу 
-                            пришла идея родится.</p>
-                    </div>
-                </a>
+                    <a class="blog-article-button" href="">
+                        <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
+                        <div class="blog-article-button-text">
+                            <h3 class="blog-article-button-header">
+                                А вызнали эти бесполезные факты про хамилионов?</h3>
+                            <p class="blog-article-button-paragraph">
+                                Например что они существовали на земле за долго до того как богу 
+                                пришла идея родится.</p>
+                        </div>
+                    </a>
 
-                <a class="blog-article-button" href="">
-                    <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
-                    <div class="blog-article-button-text">
-                        <h3 class="blog-article-button-header">
-                            А вызнали эти бесполезные факты про хамилионов?</h3>
-                        <p class="blog-article-button-paragraph">
-                            Например что они существовали на земле за долго до того как богу 
-                            пришла идея родится.</p>
-                    </div>
-                </a>
+                    <a class="blog-article-button" href="">
+                        <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
+                        <div class="blog-article-button-text">
+                            <h3 class="blog-article-button-header">
+                                А вызнали эти бесполезные факты про хамилионов?</h3>
+                            <p class="blog-article-button-paragraph">
+                                Например что они существовали на земле за долго до того как богу 
+                                пришла идея родится.</p>
+                        </div>
+                    </a>
 
-                <a class="blog-article-button" href="">
-                    <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
-                    <div class="blog-article-button-text">
-                        <h3 class="blog-article-button-header">
-                            А вызнали эти бесполезные факты про хамилионов?</h3>
-                        <p class="blog-article-button-paragraph">
-                            Например что они существовали на земле за долго до того как богу 
-                            пришла идея родится.</p>
-                    </div>
-                </a>
+                    <a class="blog-article-button" href="">
+                        <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
+                        <div class="blog-article-button-text">
+                            <h3 class="blog-article-button-header">
+                                А вызнали эти бесполезные факты про хамилионов?</h3>
+                            <p class="blog-article-button-paragraph">
+                                Например что они существовали на земле за долго до того как богу 
+                                пришла идея родится.</p>
+                        </div>
+                    </a>
 
-                <a class="blog-article-button" href="">
-                    <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
-                    <div class="blog-article-button-text">
-                        <h3 class="blog-article-button-header">
-                            А вызнали эти бесполезные факты про хамилионов?</h3>
-                        <p class="blog-article-button-paragraph">
-                            Например что они существовали на земле за долго до того как богу 
-                            пришла идея родится.</p>
-                    </div>
-                </a>
+                    <a class="blog-article-button" href="">
+                        <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
+                        <div class="blog-article-button-text">
+                            <h3 class="blog-article-button-header">
+                                А вызнали эти бесполезные факты про хамилионов?</h3>
+                            <p class="blog-article-button-paragraph">
+                                Например что они существовали на земле за долго до того как богу 
+                                пришла идея родится.</p>
+                        </div>
+                    </a>
 
-                <a class="blog-article-button" href="">
-                    <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
-                    <div class="blog-article-button-text">
-                        <h3 class="blog-article-button-header">
-                            А вызнали эти бесполезные факты про хамилионов?</h3>
-                        <p class="blog-article-button-paragraph">
-                            Например что они существовали на земле за долго до того как богу 
-                            пришла идея родится.</p>
-                    </div>
-                </a>
+                    <a class="blog-article-button" href="">
+                        <img class="blog-article-button-image" src="../assets/hamilcton.jpeg">
+                        <div class="blog-article-button-text">
+                            <h3 class="blog-article-button-header">
+                                А вызнали эти бесполезные факты про хамилионов?</h3>
+                            <p class="blog-article-button-paragraph">
+                                Например что они существовали на земле за долго до того как богу 
+                                пришла идея родится.</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
