Over vida good, started doing footer

--- a/html/over-vida.html
+++ b/html/over-vida.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/over-vida.css">
+    <link rel="stylesheet" href="../css/over-vida-history.css">
+
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     
 </head>
 
@@ -56,8 +60,55 @@
         </div>
         <div class="page-content">
             <div class="part">
-                <div class="part-with-image">
+                <div class="side">
                     <img class="portrait" src="../assets/sharon-den-adel.jpeg">
+                </div>
+                <div class="side">
+                    <p class="person-info">Hi, ik ben Vida en hierboven lees je mijn levensmissie. Ik weet zeker dat het ook deels jouw missie is! Jij en ik, werken met mensen, we zetten ons in door onze kennis en ervaring door te geven. Mensen bloeien door mensen. We hebben de mooiste baan van de wereld!
+                                           Maar makkelijk is het niet! Soms is het zelfs erg frustrerend. Ik ben keer op keer getuige geweest van drastische, soms erg pijnlijke en vaak onbegrijpelijke keuzes die mensen kunnen maken! Zo werd "Waarom gedragen we ons zoals we ons gedragen?" mijn levensvraag. Nu 30 jaar later, na talloze studies, trainingen, boeken, toepassen en uitproberen, kan ik het omvatten! Het antwoord is eigenlijk niet zo ingewikkeld!</p>
+                </div>
+            </div>
+            <div class="part">
+                <div class="side">
+                    <p class="person-info">Hi, ik ben Vida en hierboven lees je mijn levensmissie. Ik weet zeker dat het ook deels jouw missie is! Jij en ik, werken met mensen, we zetten ons in door onze kennis en ervaring door te geven. Mensen bloeien door mensen. We hebben de mooiste baan van de wereld!
+                                           Maar makkelijk is het niet! Soms is het zelfs erg frustrerend. Ik ben keer op keer getuige geweest van drastische, soms erg pijnlijke en vaak onbegrijpelijke keuzes die mensen kunnen maken! Zo werd "Waarom gedragen we ons zoals we ons gedragen?" mijn levensvraag. Nu 30 jaar later, na talloze studies, trainingen, boeken, toepassen en uitproberen, kan ik het omvatten! Het antwoord is eigenlijk niet zo ingewikkeld!</p>
+                </div>
+                <div class="side">
+                    <img class="portrait" src="../assets/sharon-den-adel.jpeg">
+                </div>
+            </div>
+
+            <div class="history">
+                <div class="history-header">
+                    <h1 class="history-h1">Nevenfuncties ter ondersteuning van<br>maatschappelijke kwesties</h1>
+                </div>
+                <div class="history-part">
+                    <h2 class="history-year">1990</h2>
+                    <h2 class="history-label">Taalvrijwilliger bij Stichting Vluchtelingenwerk Zoetermeer<br>Actief in Bahá’í-gemeenschap Zoetermeer</h2>
+                </div>
+                <div class="history-part">
+                    <h2 class="history-year">1990</h2>
+                    <h2 class="history-label">Taalvrijwilliger bij Stichting Vluchtelingenwerk Zoetermeer<br>Actief in Bahá’í-gemeenschap Zoetermeer</h2>
+                </div>
+                <div class="history-part">
+                    <h2 class="history-year">1990</h2>
+                    <h2 class="history-label">Taalvrijwilliger bij Stichting Vluchtelingenwerk Zoetermeer<br>Actief in Bahá’í-gemeenschap Zoetermeer</h2>
+                </div>
+                <div class="history-part">
+                    <h2 class="history-year">1990</h2>
+                    <h2 class="history-label">Taalvrijwilliger bij Stichting Vluchtelingenwerk Zoetermeer<br>Actief in Bahá’í-gemeenschap Zoetermeer</h2>
+                </div>
+                <div class="history-part">
+                    <h2 class="history-year">1990</h2>
+                    <h2 class="history-label">Taalvrijwilliger bij Stichting Vluchtelingenwerk Zoetermeer<br>Actief in Bahá’í-gemeenschap Zoetermeer</h2>
+                </div>
+                <div class="history-part">
+                    <h2 class="history-year">1990</h2>
+                    <h2 class="history-label">Taalvrijwilliger bij Stichting Vluchtelingenwerk Zoetermeer<br>Actief in Bahá’í-gemeenschap Zoetermeer</h2>
+                </div>
+                <div class="history-part">
+                    <h2 class="history-year">1990</h2>
+                    <h2 class="history-label">Taalvrijwilliger bij Stichting Vluchtelingenwerk Zoetermeer<br>Actief in Bahá’í-gemeenschap Zoetermeer</h2>
                 </div>
             </div>
         </div>
