--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/home-first-part.css">
     <link rel="stylesheet" href="/css/home-second-part.css">
@@ -107,6 +108,31 @@
         </div>
     </main>
 
+
+    <footer>
+        <div class="footer-info">
+            <h2 class="footer-info-header">COMMITED TO CHICAGO</h2>
+            <p class="footer-info-text">We bouwen aan een generatie met bewust goed gedrag. Door wetenschap vanuit pedagogie, psychologie en neurowetenschappen om te zetten in inzichten en tools voor professionals die rondom opgroeiende kinderen werkzaam zijn. We leren de kinderen hoe ze wijze en rechtvaardig keuzes kunnen maken voor zichzelf, hun omgeving en de wereld.</p>
+        </div>
+
+        <div class="footer-contact-us">
+            <h2 class="footer-contact-us-header">CONTACT US</h2>
+            <div class="footer-contact-us-content">
+                <div id="footer-contact-us-contact-phone" class="footer-contact-us-contact">
+                    <h1 class="footer-contact-us-contact-icon" style="content:'\f095'"></h1>
+                    <p class="footer-contact-us-contact-label">+314 159 265 35</p>
+                </div>
+                <div id="footer-contact-us-contact-gmail" class="footer-contact-us-contact">
+                    <h1 class="footer-contact-us-contact-icon"></h1>
+                    <p class="footer-contact-us-contact-label">pi@gmail.com</p>
+                </div>
+                <div id="footer-contact-us-contact-instagram" class="footer-contact-us-contact">
+                    <h1 class="footer-contact-us-contact-icon"></h1>
+                    <p class="footer-contact-us-contact-label">instagram</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 
