--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
             <h2 class="footer-contact-us-header">CONTACT US</h2>
             <div class="footer-contact-us-content">
                 <div id="footer-contact-us-contact-phone" class="footer-contact-us-contact">
-                    <h1 class="footer-contact-us-contact-icon" style="content:'\f095'"></h1>
-                    <p class="footer-contact-us-contact-label">+314 159 265 35</p>
+                    <image src="assets/phone-logo.png" class="footer-contact-us-icon">
+                    <p class="footer-contact-us-label">+314 159 265 35</p>
                 </div>
                 <div id="footer-contact-us-contact-gmail" class="footer-contact-us-contact">
-                    <h1 class="footer-contact-us-contact-icon"></h1>
-                    <p class="footer-contact-us-contact-label">pi@gmail.com</p>
+                    <image src="assets/email-logo.png" class="footer-contact-us-icon">
+                    <p class="footer-contact-us-label">pi@gmail.com</p>
                 </div>
                 <div id="footer-contact-us-contact-instagram" class="footer-contact-us-contact">
-                    <h1 class="footer-contact-us-contact-icon"></h1>
-                    <p class="footer-contact-us-contact-label">instagram</p>
+                    <image src="assets/instagram-logo.png" class="footer-contact-us-icon">
+                    <p class="footer-contact-us-label">instagram</p>
                 </div>
             </div>
         </div>
