Finished contact page. Blue style. Font style.

--- a/html/over-vida.html
+++ b/html/over-vida.html
@@ -37,16 +37,16 @@
                 <a id="menu-home" class="menu-bar-item menu-bar-text" href="../index.html">
                     Home
                 </a>
-                <a id="menu-over-vida" class="menu-bar-item menu-bar-text" href="../html/over-vida.html">
+                <a id="menu-over-vida" class="menu-bar-item menu-bar-text" href="over-vida.html">
                     Over Vida
                 </a>
-                <a id="menu-blog" class="menu-bar-item menu-bar-text" href="../html/blog.html">
+                <a id="menu-blog" class="menu-bar-item menu-bar-text" href="blog.html">
                     Blog
                 </a>
                 <a id="menu-trainingen" class="menu-bar-item menu-bar-text" href="">
                     Trainingen
                 </a>    
-                <a id="menu-contact" class="menu-bar-item menu-bar-text" href="">
+                <a id="menu-contact" class="menu-bar-item menu-bar-text" href="contact.html">
                     Contact
                 </a>
             </div>
