--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a id="menu-trainingen" class="menu-bar-item menu-bar-text" href="">
                     Trainingen
                 </a>
-                <a id="menu-contact" class="menu-bar-item menu-bar-text" href="">
+                <a id="menu-contact" class="menu-bar-item menu-bar-text" href="html/contact.html">
                     Contact
                 </a>
             </div>
